Added pickle dump code of BERT results

--- a/BERT_on_IEMOCAP_for_DCNN.ipynb
+++ b/BERT_on_IEMOCAP_for_DCNN.ipynb
@@ -69,7 +69,8 @@
         "from keras import optimizers\n",
         "from keras.models import Sequential,Model,load_model\n",
         "from keras.layers import Dense, Dropout, Flatten, Conv2D, MaxPool2D,GlobalAveragePooling2D\n",
-        "from keras.callbacks import TensorBoard,ReduceLROnPlateau,ModelCheckpoint"
+        "from keras.callbacks import TensorBoard,ReduceLROnPlateau,ModelCheckpoint\n",
+        "import pickle"
       ],
       "execution_count": 1,
       "outputs": []
@@ -81,7 +82,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dd2907cb-a206-4e9b-a8af-928a4854dd0c"
+        "outputId": "2a0fab7b-a944-4967-bdae-41b87f76af15"
       },
       "source": [
         "!wget --quiet https://raw.githubusercontent.com/tensorflow/models/master/official/nlp/bert/tokenization.py\n",
@@ -92,11 +93,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Collecting sentencepiece\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/e5/2d/6d4ca4bef9a67070fa1cac508606328329152b1df10bdf31fb6e4e727894/sentencepiece-0.1.94-cp36-cp36m-manylinux2014_x86_64.whl (1.1MB)\n",
-            "\r\u001b[K     |▎                               | 10kB 15.3MB/s eta 0:00:01\r\u001b[K     |▋                               | 20kB 19.3MB/s eta 0:00:01\r\u001b[K     |▉                               | 30kB 15.5MB/s eta 0:00:01\r\u001b[K     |█▏                              | 40kB 14.4MB/s eta 0:00:01\r\u001b[K     |█▌                              | 51kB 11.8MB/s eta 0:00:01\r\u001b[K     |█▊                              | 61kB 11.8MB/s eta 0:00:01\r\u001b[K     |██                              | 71kB 11.6MB/s eta 0:00:01\r\u001b[K     |██▍                             | 81kB 11.7MB/s eta 0:00:01\r\u001b[K     |██▋                             | 92kB 11.6MB/s eta 0:00:01\r\u001b[K     |███                             | 102kB 11.7MB/s eta 0:00:01\r\u001b[K     |███▎                            | 112kB 11.7MB/s eta 0:00:01\r\u001b[K     |███▌                            | 122kB 11.7MB/s eta 0:00:01\r\u001b[K     |███▉                            | 133kB 11.7MB/s eta 0:00:01\r\u001b[K     |████▏                           | 143kB 11.7MB/s eta 0:00:01\r\u001b[K     |████▍                           | 153kB 11.7MB/s eta 0:00:01\r\u001b[K     |████▊                           | 163kB 11.7MB/s eta 0:00:01\r\u001b[K     |█████                           | 174kB 11.7MB/s eta 0:00:01\r\u001b[K     |█████▎                          | 184kB 11.7MB/s eta 0:00:01\r\u001b[K     |█████▋                          | 194kB 11.7MB/s eta 0:00:01\r\u001b[K     |█████▉                          | 204kB 11.7MB/s eta 0:00:01\r\u001b[K     |██████▏                         | 215kB 11.7MB/s eta 0:00:01\r\u001b[K     |██████▌                         | 225kB 11.7MB/s eta 0:00:01\r\u001b[K     |██████▊                         | 235kB 11.7MB/s eta 0:00:01\r\u001b[K     |███████                         | 245kB 11.7MB/s eta 0:00:01\r\u001b[K     |███████▍                        | 256kB 11.7MB/s eta 0:00:01\r\u001b[K     |███████▋                        | 266kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████                        | 276kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████▎                       | 286kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████▌                       | 296kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████▉                       | 307kB 11.7MB/s eta 0:00:01\r\u001b[K     |█████████                       | 317kB 11.7MB/s eta 0:00:01\r\u001b[K     |█████████▍                      | 327kB 11.7MB/s eta 0:00:01\r\u001b[K     |█████████▊                      | 337kB 11.7MB/s eta 0:00:01\r\u001b[K     |██████████                      | 348kB 11.7MB/s eta 0:00:01\r\u001b[K     |██████████▎                     | 358kB 11.7MB/s eta 0:00:01\r\u001b[K     |██████████▋                     | 368kB 11.7MB/s eta 0:00:01\r\u001b[K     |██████████▉                     | 378kB 11.7MB/s eta 0:00:01\r\u001b[K     |███████████▏                    | 389kB 11.7MB/s eta 0:00:01\r\u001b[K     |███████████▌                    | 399kB 11.7MB/s eta 0:00:01\r\u001b[K     |███████████▊                    | 409kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████████                    | 419kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████████▍                   | 430kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████████▋                   | 440kB 11.7MB/s eta 0:00:01\r\u001b[K     |█████████████                   | 450kB 11.7MB/s eta 0:00:01\r\u001b[K     |█████████████▎                  | 460kB 11.7MB/s eta 0:00:01\r\u001b[K     |█████████████▌                  | 471kB 11.7MB/s eta 0:00:01\r\u001b[K     |█████████████▉                  | 481kB 11.7MB/s eta 0:00:01\r\u001b[K     |██████████████                  | 491kB 11.7MB/s eta 0:00:01\r\u001b[K     |██████████████▍                 | 501kB 11.7MB/s eta 0:00:01\r\u001b[K     |██████████████▊                 | 512kB 11.7MB/s eta 0:00:01\r\u001b[K     |███████████████                 | 522kB 11.7MB/s eta 0:00:01\r\u001b[K     |███████████████▎                | 532kB 11.7MB/s eta 0:00:01\r\u001b[K     |███████████████▋                | 542kB 11.7MB/s eta 0:00:01\r\u001b[K     |███████████████▉                | 552kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████████████▏               | 563kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████████████▌               | 573kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████████████▊               | 583kB 11.7MB/s eta 0:00:01\r\u001b[K     |█████████████████               | 593kB 11.7MB/s eta 0:00:01\r\u001b[K     |█████████████████▍              | 604kB 11.7MB/s eta 0:00:01\r\u001b[K     |█████████████████▋              | 614kB 11.7MB/s eta 0:00:01\r\u001b[K     |██████████████████              | 624kB 11.7MB/s eta 0:00:01\r\u001b[K     |██████████████████▏             | 634kB 11.7MB/s eta 0:00:01\r\u001b[K     |██████████████████▌             | 645kB 11.7MB/s eta 0:00:01\r\u001b[K     |██████████████████▉             | 655kB 11.7MB/s eta 0:00:01\r\u001b[K     |███████████████████             | 665kB 11.7MB/s eta 0:00:01\r\u001b[K     |███████████████████▍            | 675kB 11.7MB/s eta 0:00:01\r\u001b[K     |███████████████████▊            | 686kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████████████████            | 696kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████████████████▎           | 706kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████████████████▋           | 716kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████████████████▉           | 727kB 11.7MB/s eta 0:00:01\r\u001b[K     |█████████████████████▏          | 737kB 11.7MB/s eta 0:00:01\r\u001b[K     |█████████████████████▌          | 747kB 11.7MB/s eta 0:00:01\r\u001b[K     |█████████████████████▊          | 757kB 11.7MB/s eta 0:00:01\r\u001b[K     |██████████████████████          | 768kB 11.7MB/s eta 0:00:01\r\u001b[K     |██████████████████████▎         | 778kB 11.7MB/s eta 0:00:01\r\u001b[K     |██████████████████████▋         | 788kB 11.7MB/s eta 0:00:01\r\u001b[K     |███████████████████████         | 798kB 11.7MB/s eta 0:00:01\r\u001b[K     |███████████████████████▏        | 808kB 11.7MB/s eta 0:00:01\r\u001b[K     |███████████████████████▌        | 819kB 11.7MB/s eta 0:00:01\r\u001b[K     |███████████████████████▉        | 829kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████████████████████        | 839kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████████████████████▍       | 849kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████████████████████▊       | 860kB 11.7MB/s eta 0:00:01\r\u001b[K     |█████████████████████████       | 870kB 11.7MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▎      | 880kB 11.7MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▋      | 890kB 11.7MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▉      | 901kB 11.7MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▏     | 911kB 11.7MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▌     | 921kB 11.7MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▊     | 931kB 11.7MB/s eta 0:00:01\r\u001b[K     |███████████████████████████     | 942kB 11.7MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▎    | 952kB 11.7MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▋    | 962kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████████████████████████    | 972kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▏   | 983kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▌   | 993kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▉   | 1.0MB 11.7MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████   | 1.0MB 11.7MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▍  | 1.0MB 11.7MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▊  | 1.0MB 11.7MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████  | 1.0MB 11.7MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▎ | 1.1MB 11.7MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▋ | 1.1MB 11.7MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▉ | 1.1MB 11.7MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▏| 1.1MB 11.7MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▍| 1.1MB 11.7MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▊| 1.1MB 11.7MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 1.1MB 11.7MB/s \n",
-            "\u001b[?25hInstalling collected packages: sentencepiece\n",
-            "Successfully installed sentencepiece-0.1.94\n"
+            "Requirement already satisfied: sentencepiece in /usr/local/lib/python3.6/dist-packages (0.1.94)\n"
           ],
           "name": "stdout"
         }
@@ -196,7 +193,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "468757fe-9b8a-470a-ba53-36da736b504c"
+        "outputId": "1f2f90f7-f8bd-463b-aa28-6ab18ef1d090"
       },
       "source": [
         "from google.colab import drive\n",
@@ -207,7 +204,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -220,7 +217,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "074a7d6f-1b88-4829-838c-97e9e8f30b70"
+        "outputId": "596f3e10-12a2-45a0-ab15-8de131fbdd4c"
       },
       "source": [
         "%%time\n",
@@ -232,8 +229,8 @@
         {
           "output_type": "stream",
           "text": [
-            "CPU times: user 43.5 s, sys: 10.8 s, total: 54.4 s\n",
-            "Wall time: 2min 40s\n"
+            "CPU times: user 43.5 s, sys: 10.8 s, total: 54.3 s\n",
+            "Wall time: 2min 52s\n"
           ],
           "name": "stdout"
         }
@@ -337,6 +334,78 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cdF10o9nRno9"
+      },
+      "source": [
+        "**SAVING THE INTERMEDIATE LAYER OUTPUT**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nz2LsC9QIOTW"
+      },
+      "source": [
+        "count=0\n",
+        "batch=[]\n",
+        "batch_processed_data=[]\n",
+        "for i in processed_data:\n",
+        "  if count!=50:\n",
+        "    batch.append(i)\n",
+        "    count=count+1\n",
+        "  else:\n",
+        "    batch_processed_data.append(batch)\n",
+        "    batch=[]\n",
+        "    count=0\n",
+        "batch_processed_data.append(batch)"
+      ],
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bPhSK7DUUfGY"
+      },
+      "source": [
+        "train_labels = Y\n",
+        "layer_names=[layer.name for layer in model.layers]\n",
+        "layer_name=layer_names[3]\n",
+        "intermediate_encodings=[]\n",
+        "for processed_data in batch_processed_data:\n",
+        "  train_input = bert_encode(processed_data, tokenizer, max_len=160)\n",
+        "  intermediate_layer_model = Model(inputs=model.input,outputs=model.get_layer(layer_name).output)\n",
+        "  intermediate_output = intermediate_layer_model.predict(train_input)\n",
+        "  intermediate_encodings.append(intermediate_output)\n",
+        "print(len(intermediate_encodings))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CWLpQEaDfNu0"
+      },
+      "source": [
+        " with open('BERT_output.pkl', 'wb') as f:\n",
+        "   pickle.dump(intermediate_encodings, f)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IYaPHjSTYiKr"
+      },
+      "source": [
+        "**RUN THE MODEL AND THEN RUN BEFORE THIS FOR INTERMEDIATE ENCODINGS. DO NOT RUN BELOW THIS ONCE AGAIN**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "K8sAlpdtRW6n"
@@ -358,7 +427,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "126b50c1-e128-45b1-fa88-46f36f7732ca"
+        "outputId": "ce8d64ad-8340-469e-9e6f-ff038aa59952"
       },
       "source": [
         "model,clf_output1 = build_model(bert_layer, max_len=161)\n",
@@ -402,7 +471,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "63146750-4265-4c46-afd5-2d7bcb0c1ac0"
+        "outputId": "00730da9-52cd-41fd-f216-ceed3e943d5f"
       },
       "source": [
         "train_history = model.fit(\n",
@@ -413,7 +482,7 @@
         "\n",
         "model.save('model.h5')"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -502,44 +571,7 @@
         {
           "output_type": "stream",
           "text": [
-            "4699/4699 [==============================] - 793s 169ms/step - loss: 1.5051 - accuracy: 0.4033\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "S1xc0w8M0FE7"
-      },
-      "source": [
-        "layer_names=[layer.name for layer in model.layers]\n",
-        "layer_name=layer_names[3]\n",
-        "intermediate_layer_model = Model(inputs=model.input,outputs=model.get_layer(layer_name).output)\n",
-        "intermediate_output = intermediate_layer_model.predict(data)"
-      ],
-      "execution_count": 23,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "mcmlcgKn0Hbf",
-        "outputId": "35dba336-f73f-4ba8-a640-80340edbfc31",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "keras_layer\n"
+            "2041/4699 [============>.................] - ETA: 7:27 - loss: 1.6320 - accuracy: 0.3332"
           ],
           "name": "stdout"
         }
@@ -549,10 +581,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "i1yXEXJpRcdF",
-        "outputId": "a0a0c509-705a-464e-e0a1-89af5c3f451d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a0a0c509-705a-464e-e0a1-89af5c3f451d"
       },
       "source": [
         "y_pred=model.predict(test_input, batch_size=1)"
@@ -607,10 +639,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ifq6GS_ylKXA",
-        "outputId": "766cf965-c805-4b52-8540-3fe0f39ed785",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "766cf965-c805-4b52-8540-3fe0f39ed785"
       },
       "source": [
         "y_pred1=np.argmax(y_pred,axis=1)\n",
