Done till training on the Data. Training accuracy: 0.53

--- a/BERT_on_IEMOCAP_for_DCNN.ipynb
+++ b/BERT_on_IEMOCAP_for_DCNN.ipynb
@@ -312,9 +312,10 @@
         "id": "Asv8M-nY5BT1"
       },
       "source": [
-        "processed_data_batching=processed_data"
+        "processed_data_batching=processed_data\n",
+        "test_processed_data_batching=test_processed_data"
       ],
-      "execution_count": 12,
+      "execution_count": 102,
       "outputs": []
     },
     {
@@ -543,6 +544,29 @@
           "output_type": "stream",
           "text": [
             "4699\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QgILAyDKzTRf",
+        "outputId": "2dbdc2eb-a7c7-4804-c9ed-a9d373d97b7d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(len(test_processed_data_batching))"
+      ],
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1623\n"
           ],
           "name": "stdout"
         }
@@ -5868,30 +5892,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "iUP4jHUAVDs3",
-        "outputId": "2568b798-b1b5-4767-806b-97ac66096861"
-      },
-      "source": [
-        "model = ResNet50(include_top=False, input_shape=(32,32,3), weights='imagenet')"
-      ],
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/resnet/resnet50_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-            "94773248/94765736 [==============================] - 1s 0us/step\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "QBbofdXLkH7f"
       },
       "source": [
@@ -5906,11 +5906,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "F4E72sGDmAFd",
-        "outputId": "c26329d8-6a71-4c9a-a3e8-c0a50d24835e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "F4E72sGDmAFd",
+        "outputId": "c26329d8-6a71-4c9a-a3e8-c0a50d24835e"
       },
       "source": [
         "print(len(intermediate_encodings[92][0]))"
@@ -5968,6 +5968,130 @@
             "(4699, 32, 32, 3)\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iUP4jHUAVDs3",
+        "outputId": "7245e590-2abd-4820-a9c2-2b606f7a772f"
+      },
+      "source": [
+        "model = ResNet50(include_top=False, input_shape=(32,32,3), weights='imagenet')\n",
+        "\n",
+        "# Freeze all the layers\n",
+        "for layer in model.layers[:]:\n",
+        "    layer.trainable = False\n",
+        "output = model.output\n",
+        "output = GlobalAveragePooling2D()(output)\n",
+        "output = Dense(units=6, activation='softmax')(output)\n",
+        "model = Model(model.input, output)"
+      ],
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hi\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tVvHcQEPtYvr",
+        "outputId": "532caa72-d50f-4196-cdfe-8f44e73eb8f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 162
+        }
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-99-4f7a56ce7457>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresnet_input\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'shape'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0TV8CNF8qakW",
+        "outputId": "16639f8c-c3b9-4724-a559-01ee537b7e20",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.compile(optimizer='adam',loss='categorical_crossentropy', metrics=['categorical_accuracy'])\n",
+        "model.fit(np.array(resnet_input), train_labels, epochs=15, batch_size=1)"
+      ],
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/15\n",
+            "4699/4699 [==============================] - 42s 9ms/step - loss: 1.3257 - categorical_accuracy: 0.5110\n",
+            "Epoch 2/15\n",
+            "4699/4699 [==============================] - 42s 9ms/step - loss: 1.3054 - categorical_accuracy: 0.5165\n",
+            "Epoch 3/15\n",
+            "4699/4699 [==============================] - 41s 9ms/step - loss: 1.2893 - categorical_accuracy: 0.5354\n",
+            "Epoch 4/15\n",
+            "4699/4699 [==============================] - 41s 9ms/step - loss: 1.2923 - categorical_accuracy: 0.5210\n",
+            "Epoch 5/15\n",
+            "4699/4699 [==============================] - 42s 9ms/step - loss: 1.2721 - categorical_accuracy: 0.5322\n",
+            "Epoch 6/15\n",
+            "4699/4699 [==============================] - 42s 9ms/step - loss: 1.2791 - categorical_accuracy: 0.5303\n",
+            "Epoch 7/15\n",
+            "4699/4699 [==============================] - 41s 9ms/step - loss: 1.2682 - categorical_accuracy: 0.5282\n",
+            "Epoch 8/15\n",
+            "4699/4699 [==============================] - 40s 8ms/step - loss: 1.2673 - categorical_accuracy: 0.5225\n",
+            "Epoch 9/15\n",
+            "4699/4699 [==============================] - 40s 9ms/step - loss: 1.2598 - categorical_accuracy: 0.5416\n",
+            "Epoch 10/15\n",
+            "4699/4699 [==============================] - 41s 9ms/step - loss: 1.2500 - categorical_accuracy: 0.5348\n",
+            "Epoch 11/15\n",
+            "4699/4699 [==============================] - 41s 9ms/step - loss: 1.2466 - categorical_accuracy: 0.5450\n",
+            "Epoch 12/15\n",
+            "4699/4699 [==============================] - 42s 9ms/step - loss: 1.2437 - categorical_accuracy: 0.5444\n",
+            "Epoch 13/15\n",
+            "4699/4699 [==============================] - 42s 9ms/step - loss: 1.2436 - categorical_accuracy: 0.5401\n",
+            "Epoch 14/15\n",
+            "4699/4699 [==============================] - 41s 9ms/step - loss: 1.2487 - categorical_accuracy: 0.5414\n",
+            "Epoch 15/15\n",
+            "4699/4699 [==============================] - 41s 9ms/step - loss: 1.2274 - categorical_accuracy: 0.5484\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7f8d41fd4668>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 101
         }
       ]
     },
