Extracting data and conversation length

--- a/Speaker_Context_Approach.ipynb
+++ b/Speaker_Context_Approach.ipynb
@@ -5,13 +5,14 @@
     "colab": {
       "name": "Speaker_Context_Approach.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyME76uqbCgiuh+gH1/EeDko",
+      "authorship_tag": "ABX9TyM3sQUkatT8FV3VqZiFcjiX",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -27,7 +28,117 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y_RKGGHt65cJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Y_RKGGHt65cJ",
+        "outputId": "9d97631c-b6ba-4e39-a8e2-4a36272eeb47"
+      },
+      "source": [
+        "import numpy as np # linear algebra\r\n",
+        "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\r\n",
+        "import numpy as np\r\n",
+        "import re\r\n",
+        "import nltk\r\n",
+        "from nltk.corpus import stopwords\r\n",
+        "nltk.download('stopwords')\r\n",
+        "nltk.download('punkt')\r\n",
+        "from nltk.tokenize import word_tokenize\r\n",
+        "import pandas as pd\r\n",
+        "import tensorflow as tf\r\n",
+        "from tensorflow.keras.layers import Dense, Input, GRU, Dropout\r\n",
+        "from tensorflow.keras.optimizers import Adam\r\n",
+        "from tensorflow.keras.models import Model\r\n",
+        "from tensorflow.keras.callbacks import ModelCheckpoint\r\n",
+        "import tensorflow_hub as hub\r\n",
+        "import pickle\r\n",
+        "from sklearn.metrics import f1_score\r\n",
+        "from sklearn.metrics import accuracy_score\r\n",
+        "from keras.utils.np_utils import to_categorical  "
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3ZkMmD5o9lUD",
+        "outputId": "ab6aa2a0-c186-4045-e415-807917f7a72a"
+      },
+      "source": [
+        "!wget --quiet https://raw.githubusercontent.com/tensorflow/models/master/official/nlp/bert/tokenization.py\r\n",
+        "!pip install sentencepiece\r\n",
+        "import tokenization"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: sentencepiece in /usr/local/lib/python3.6/dist-packages (0.1.94)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wigTbOma9qam",
+        "outputId": "1bc8bce0-1024-493c-d15a-69b76bc13616"
+      },
+      "source": [
+        "from google.colab import drive\r\n",
+        "drive.mount('/content/gdrive')"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/gdrive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1zQsSz_f_O-p"
+      },
+      "source": [
+        "with open('/content/gdrive/My Drive/iemocap/train/sentences.pkl', 'rb') as f:\r\n",
+        "    data = pickle.load(f)\r\n",
+        "with open('/content/gdrive/My Drive/iemocap/train/labels.pkl', 'rb') as f:\r\n",
+        "    labels = pickle.load(f)\r\n",
+        "with open('/content/gdrive/My Drive/iemocap/train/conversation_length.pkl', 'rb') as f:\r\n",
+        "    data_conv_length = pickle.load(f)"
+      ],
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ghsl6JoqAFmB"
       },
       "source": [
         ""
